--- a/public_html/backend/public/assets/css/statstikStyle.css
+++ b/public_html/backend/public/assets/css/statstikStyle.css
@@ -1,12 +1,28 @@
 
-button.btn {
-    background-color: #633D00;
-    border-color: #633D00;
-    border-radius: 6px;
+.button-container {
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+    margin-bottom: 20px;
 }
 
-button.btn:hover {
-    background-color: #3b2500; 
-    border-color: #3b2500;
-    border-radius: 6px;
+.button-container .btn {
+    background-color: #633D00;
+    color: white;
+    border: none;
+    font-size: 16px;
+    padding: 10px 20px;
+    cursor: pointer;
+    border-radius: 5px;
+    transition: background-color 0.3s ease, transform 0.2s ease;
+}
+
+.button-container .btn:hover {
+    background-color: #331f00;
+    transform: scale(1.05);
+}
+
+/* Aktiver Button */
+.button-container .btn.active {
+    background-color: #b16d00 !important;
 }
