--- a/public_html/backend/public/assets/css/allPlaylistBearbeitenStyle.css
+++ b/public_html/backend/public/assets/css/allPlaylistBearbeitenStyle.css
@@ -1,4 +1,4 @@
-
+/*buttons (content hinzufügen & speichern) stylen*/
 a.btn, #contentDazu {
     background-color: #633D00 !important;
     color: white !important;
