--- a/public_html/backend/public/assets/css/allPlaylistStyle.css
+++ b/public_html/backend/public/assets/css/allPlaylistStyle.css
@@ -1,3 +1,4 @@
+/*buttons (löschen & bearbeiten)(bootstrap icons) stylen */
 button.btn {
     color: black !important;
     border: none !important;
