--- a/public_html/backend/public/assets/css/Userstyle.css
+++ b/public_html/backend/public/assets/css/Userstyle.css
@@ -1,4 +1,4 @@
-
+/*buttons (alle benutzer und neuen benutzer erstellen) stylen */
 a.btn {
     background-color: #633D00;
     border-color: #633D00;
