--- a/public_html/backend/public/assets/css/allContentStyle.css
+++ b/public_html/backend/public/assets/css/allContentStyle.css
@@ -1,3 +1,4 @@
+/* buttons zum bearbeiten und löschen (bootstrap icons) stylen */
 button.btn {
     color: black !important;
     border: none !important;
@@ -16,6 +17,7 @@ a.btn:hover {
     background-color:rgb(255, 255, 255);
 }
 
+/*vorschaubilder große anpassen*/
 #vorschau {
     width: 0.9;
     height: 0.9;
