--- a/public_html/backend/public/assets/css/devicesStyle.css
+++ b/public_html/backend/public/assets/css/devicesStyle.css
@@ -1,4 +1,4 @@
-
+/* feld indem die clients-rechtecke sind*/
 #clientsList {
     width: 100%;
     height: 600px;
@@ -8,7 +8,7 @@
     overflow: hidden;
     margin: 20px auto;
 }
-
+/* einzelner client(=div)*/
 .client {
     background-color: #999999;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
@@ -28,6 +28,7 @@
     opacity: 0.9;
 }
 
+/* buttons (löschen und bearbeiten)*/
 button.btn {
     color: black !important;
     border: none !important;
