--- a/public_html/backend/public/assets/css/newPlaylistStyle.css
+++ b/public_html/backend/public/assets/css/newPlaylistStyle.css
@@ -5,23 +5,26 @@
     height: 100vh;
 }
 
+/*linke hälfte der seite */
 .left {
     padding: 1rem;
     border-right: 2px solid #ddd;
     overflow-y: auto;
 }
 
+/* rechte seite*/
 .preview-area {
     padding: 1rem;
     text-align: center;
     overflow-y: auto;
     min-height: 200px;
 }
-
+/* text mittig*/
 p{
     text-align: center;
 }
 
+/* footer für gesamtdauer und speicherbutton*/
 .playlist-footer {
     position: fixed;
     bottom: 0;
@@ -36,6 +39,7 @@ p{
     width: 50%;
 }
 
+/* speicherbutton*/
 #save-playlist{
     margin-bottom: 5px;
     margin-right: 115px;
@@ -52,6 +56,8 @@ p{
     color: white !important;
 }
 
+/*auf der rechten seiten gibt es einen preview des contents mit seinen daten, styling dazu: */
+/* jeder content hat eine eigenes preview div*/
 .preview-cell {
     text-align: center;
 }
@@ -85,10 +91,11 @@ p{
     flex-direction: column;
 }
 
+/*contentname */
 .file-name {
     font-weight: bold;
 }
-
+/*content typ */
 .file-type {
     color: gray;
     font-size: 12px;
